assets/scss/main.scss
@import "variables";
body {
    width: 100%;
    height: 100%;
    background: #fff;
    color: $color-dark;
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
}

body a {
    color: $color-dark;
    &:hover {
        color: $color-purple;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Montserrat', serif;
    font-weight: 700;
}

h1 {
    font-size: 1.8rem;
    margin: auto;
    text-align: center;
}

h2 {
    font-size: 2.5rem;
}

h3 {
    font-size: 1.3rem;
}

i {
    font-style: italic;
}

#about,
#contact,
#donations {
    padding-top: 90px;
    padding-bottom: 90px;
    border-bottom: 1px solid rgba(211, 211, 211, 0.3);
    border-top: 1px solid rgba(211, 211, 211, 0.3);
}

.bg-grey {
    background: rgba(244, 244, 244, 0.3);
}

.section-heading {
    margin-bottom: 40px;
    margin-top: 70px;
    h2 {
        .initial {
            width: 0.9em;
            height: 0.9em;
            padding: 0 .1em;
        }
    }
}

.social-links {
    margin: auto;
    text-align: left;
    li {
        display: inline-block;
        margin: 20px 40px;
        font-size: 1.25em;
        a {
            color: $color-dark;
            &:hover {
                color: $color-purple;
            }
        }
    }
}

.social-links-fixed {
    bottom: 5%;
    right: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    box-shadow: 1px 1px 5px 1px rgba(0, 15, 27, 0.07);
    padding: 10px;
    background: #FFF;
    ul {
        margin-bottom: 0;
        li {
            font-size: 1.25em;
            a:hover {
                color: $color-purple;
            }
        }
    }
}

.btn {
    border-radius: 0;
    padding: .5rem 2.75rem;
    background: $color-dark;
    color: #FFF;
}

header {
    transition: background-color .3s ease-in-out;
    background: $color-dark;
    text-transform: uppercase;
    font-weight: bold;
    .social-links-fixed {
        right: -40px;
        transition: right .3s ease-in-out;
        background-color: $color-dark;
        @media all and (max-width: 991px) {
            position: static!important;
            display: block;
            box-shadow: none;
            margin: 0 auto;
            right: unset!important;
            left: unset;
            width: 50%;
            max-width: 180px;
            ul {
                flex-direction: row!important;
                margin: 0 auto;
                width: 100%;
                justify-content: space-between;
            }
        }
    }
    &.scrolled {
        background: $color-dark;
        box-shadow: 1px 1px 3px 1px rgba(128, 128, 128, 0.1);
        .navbar-nav {
            li.nav-item {
                .cta-item {
                    a.nav-link {
                        border: 1px solid $color-dark;
                        background: transparent;
                        &:hover {
                            background: $color-yellow;
                            color: #fff;
                        }
                    }
                }
            }
        }
        .social-links-fixed {
            right: 0;
        }
    }
    nav {
        padding: .2rem 0!important;
        .navbar-brand {
            h1 {
                font-size: 12px;
                margin-bottom: 0;
            }
        }
    }
    .navbar-nav {
        padding: 0;
        li.nav-item {
            margin: 0 30px;
            font-size: .7em;
            &.cta-item {
                color: white;
                &.active {
                    .nav-link {
                        background: $color-dark!important;
                        color: #FFF!important;
                        border: 1px solid #FFF;
                    }
                }
                a.nav-link {
                    border: 1px solid white;
                    background: transparent;
                    margin-top: .2rem;
                    padding: .2rem 1rem;
                    transition: all .15s ease-in-out;
                    &:hover {
                        background: white;
                        color: $color-yellow;
                    }
                }
            }
            a.nav-link {
                color: white;
                padding: 0.5rem 0;
                &:hover,
                &:focus {
                    color: $color-yellow;
                }
            }
            &.active {
                .nav-link {
                    border-bottom: 1px solid #fff;
                }
            }
        }
        li.lang-selector {
            text-transform: uppercase;
            a {
                &.dropdown-toggle {
                    color: $white!important;
                    &:hover,
                    &:active {
                        color: $color-yellow!important;
                    }
                }
                border-color: #FFF!important;
                @media all and (max-width: 991px) {
                    border: 0!important;
                    a:hover {
                        border: 0!important;
                    }
                }
            }
            ul.dropdown-menu {
                min-width: unset;
                max-width: 60px;
                li {
                    text-align: center;
                    a {
                        padding: 3px 15px;
                        font-size: .7rem;
                        &:active {
                            background: unset;
                            color: unset;
                        }
                    }
                }
            }
            @media all and (max-width: 991px) {
                a {
                    padding: 0 12px 0 0;
                    font-size: 1.25rem;
                }
                margin-bottom: 60px;
                border: 0!important;
                a:hover {
                    border: 0!important;
                }
            }
        }
    }
    .header-logo {
        height: 40px;
    }
}
/* ... */

